<resources>

    <string name="app_name">Map Quiz</string>
    <string name="title_activity_main">Map Quiz</string>

    <string name="tv_question">Trouver %s</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_skip_next">Suivant</string>
    <string name="toast_correct">Correct!</string>
    <string name="toast_wrong">Faux. ce pays est %s</string>
    <string name="toast_no_continents">You have to pick at least one continent</string>

    <string name="continents">Continents:</string>
    <string name="continent_africa">Afrique</string>
    <string name="continent_asia">Asie</string>
    <string name="continent_europa">Europe</string>
    <string name="continent_s_america">Amérique du Sud </string>
    <string name="continent_n_america">Amérique du Nord</string>
    <string name="continent_other">Autres</string>

    <string name="difficulty">Difficulté</string>
    <string name="diff_easy">Facile</string>
    <string name="diff_medium">Moyen</string>
    <string name="diff_hard">Difficile</string>

    <string name="save">Enregistrer votre partie</string>
    <string name="toast_saved">Régalge enregistré</string>
    <string name="reset_alert_title">Recommencer ?</string>
    <string name="reset_alert_msg">es paramètres du jeu ont été modifiés.\nVoulez-vous redémarrer?</string>

    <string name="gameover_alert_title">Le Jeu est terminé</string>
    <string name="gameover_alert_msg">Tu as réussi à connaitre  %d de %d pays\n Vous voulez jouez Encore fois?</string>

    <string name="skip_hint">Génial bravo</string>

    <string name="alert_positive">Oui</string>
    <string name="alert_negative">Non</string>
   </resources>
